HomeWork71. Task1. Change models, Repository, DTO, Controller

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -101,3 +101,10 @@ ul {
 li {
     padding-left: 15px;
 }
+.nameBrand{
+    text-align: center;
+    font-size: 3em;
+    color: lightseagreen;
+    font-style: oblique;
+}
+
